# mpy_template

./: .gitignore  pyproject.toml  readme.md  requirements-stubs.txt  requirements-typings.txt
src/: bar.py  foo copy.py  foo.py  main.py
src/sub/: foo.py
tools/: mpy-cross_dist.ps1  mpy-cross_dist.sh
