[project]
name = "micropython-project"
version = "0.1.0"

[project.optional-dependencies]
# install to folder typings
# uv pip install -r pyproject.toml --extra stubs --target typings 
stubs = [
  "micropython-esp32-stubs"
]


# ###################################################################
# pyright options:

[tool.pyright]
include = ["src"]
ignore = ["**/typings"]
exclude = [".*", "__*", "**/typings"]

typeCheckingMode = "basic"
stubPath = "typings"
typeshedPath = "typings"
pythonPlatform = "Linux"

reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "information"

# ###################################################################
# # mypy global options:
# [tool.mypy]
# platform = "linux"
# mypy_path = "typings"
# # custom-typeshed-dir = "typings"
# files = "*.py"
# exclude = [
#     "typings[\\/].*", # TOML basic string 
# ]

# follow_imports = "silent"
# follow_imports_for_stubs = true
# no_site_packages = true
# check_untyped_defs = true
# disable_error_code = ["no-redef", "assignment"]

# ###################################################################
